add footer and header, add favicon

--- a/index.html
+++ b/index.html
@@ -6,8 +6,154 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RubyHome</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./images/ruby-logo.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./scss/style.css">
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/d8f94193bc.js" crossorigin="anonymous"></script>
+    <script src="./js/index.js"></script>
 </head>
 <body>
+<!-- Header -->
+<header class="header">
+    <div class="wrapper-container">
+        <div class="wrapper-header">
+            <div class="wrapper-logo">
+                <img src="./images/logo.png" alt="logo-company">
+            </div>
+
+            <div class="wrapper-nav">
+                <ul class="nav-lists">
+                    <li class="nav-list">
+                        <a href="javascript:void(0)">Home</a>
+                    </li>
+                    <li class="nav-list">
+                        <a href="javascript:void(0)">Properties</a>
+                    </li>
+                    <li class="nav-list">
+                        <a href="javascript:void(0)">About us</a>
+                    </li>
+                    <li class="nav-list">
+                        <a href="javascript:void(0)">Blog</a>
+                    </li>
+                </ul>
+                <button>Contact us</button>
+            </div>
+        </div>
+    </div>
+</header>
+
+<!-- Header content -->
+<section class="header-content">
+    <div class="wrapper-container">
+    </div>
+</section>
+
+<!-- Partners -->
+<section class="partners">
+    <div class="wrapper-container">
+    </div>
+</section>
+
+<!-- Properties -->
+<section class="properties">
+    <div class="wrapper-container">
+    </div>
+</section>
+
+<!-- Featured -->
+<section class="featured">
+    <div class="wrapper-container">
+    </div>
+</section>
+
+<!-- Reviews -->
+<section class="reviews">
+    <div class="wrapper-container">
+    </div>
+</section>
+
+<!-- Subscribe -->
+<section class="subscribe">
+    <div class="wrapper-container">
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="footer">
+    <div class="wrapper-container">
+        <div class="wrapper-footer">
+            <div class="footer-blocks">
+                <div class="wrapper-content">
+                    <img src="./images/logo.png" alt="logo-company">
+                    <p>Contrary to popular is not simply random text. It has...</p>
+                    <div class="wrapper-social">
+                        <ul class="social-lists">
+                            <li class="social-list">
+                                <a href="javascript:void(0)">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li class="social-list">
+                                <a href="javascript:void(0)">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li class="social-list">
+                                <a href="javascript:void(0)">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li class="social-list">
+                                <a href="javascript:void(0)">
+                                    <i class="fa-brands fa-youtube"></i>
+                                </a>
+                            </li>
+                            <li class="social-list">
+                                <a href="javascript:void(0)">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-blocks">
+                <div class="wrapper-content">
+                    <h4>About</h4>
+                    <ul class="footer-navigation">
+                        <li><a href="javascript:void(0)">Company</a></li>
+                        <li><a href="javascript:void(0)">Team</a></li>
+                        <li><a href="javascript:void(0)">Career</a></li>
+                        <li><a href="javascript:void(0)">Blogs</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-blocks">
+                <div class="wrapper-content">
+                    <h4>Products</h4>
+                    <ul class="footer-navigation">
+                        <li><a href="javascript:void(0)">E-Books</a></li>
+                        <li><a href="javascript:void(0)">Presentation</a></li>
+                        <li><a href="javascript:void(0)">Management</a></li>
+                        <li><a href="javascript:void(0)">Dashboard</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-blocks">
+                <div class="wrapper-content">
+                    <h4>Address</h4>
+                    <ul class="footer-navigation">
+                        <li>Country Delevery</li>
+                        <li>Counter Beach Post</li>
+                        <li><a href="javascript:void(0)">www.itobd.com</a></li>
+                        <li><a href="tel:880176565655">+880176565655</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
