add section subscribe

--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
 <!-- Subscribe -->
 <section class="subscribe">
     <div class="wrapper-container">
+        <div class="wrapper-subscribe">
+            <div class="wrapper-text">
+                <h2>Get listed your home as a owner</h2>
+                <div class="wrapper-paragraph">
+                    <p>Here is a list of the greatest real estate company slogans of all-time. These catchy slogans are
+                        followed by the Greatest Real Estate.</p>
+                </div>
+            </div>
+            <div class="wrapper-email">
+                <input type="email" placeholder="Enter email address">
+                <button type="submit">Subscribe</button>
+            </div>
+        </div>
     </div>
 </section>
 
