add section partners

--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
 <!-- Partners -->
 <section class="partners">
     <div class="wrapper-container">
+        <div class="wrapper-title">
+            <h2>Our Partners</h2>
+        </div>
+        <div class="wrapper-partners-blocks">
+            <div class="wrapper-partners-block">
+                <img src="./images/partner-1.png" alt="logo-company">
+            </div>
+            <div class="wrapper-partners-block">
+                <img src="./images/partner-2.png" alt="logo-company">
+            </div>
+            <div class="wrapper-partners-block">
+                <img src="./images/partner-3.png" alt="logo-company">
+            </div>
+            <div class="wrapper-partners-block">
+                <img src="./images/partner-4.png" alt="logo-company">
+            </div>
+            <div class="wrapper-partners-block">
+                <img src="./images/partner-5.png" alt="logo-company">
+            </div>
+        </div>
     </div>
 </section>
 
