add section featured

--- a/index.html
+++ b/index.html
@@ -84,6 +84,64 @@
 <!-- Featured -->
 <section class="featured">
     <div class="wrapper-container">
+        <div class="wrapper-title">
+            <h2>Property Featured</h2>
+            <div class="wrapper-paragraph">
+                <p>Real estate is a crowded field. But with the number of buyers purchasing homes through real estate agents
+                    and brokers growing there’s plenty of </p>
+            </div>
+        </div>
+        <div class="wrapper-featured-blocks">
+            <div class="featured-blocks-column">
+                <div class="block-info">
+                    <div class="block-icon">
+                        <i class="fa-solid fa-shield-dog"></i>
+                    </div>
+                    <h3>100% Security</h3>
+                    <p>For many of us, buying a home is a dre and one not easily attainable.</p>
+                </div>
+                <div class="block-info">
+                    <div class="block-icon">
+                        <i class="fa-solid fa-fan"></i>
+                    </div>
+                    <h3>Free air conditioner</h3>
+                    <p>For many of us, buying a home is a dre and one not easily attainable.</p>
+                </div>
+                <div class="block-info">
+                    <div class="block-icon">
+                        <i class="fa-solid fa-seedling"></i>
+                    </div>
+                    <h3>Flower garden</h3>
+                    <p>For many of us, buying a home is a dre and one not easily attainable.</p>
+                </div>
+            </div>
+            <div class="featured-blocks-img">
+                <img src="./images/featured-img.png" alt="decoration-img">
+            </div>
+            <div class="featured-blocks-column">
+                <div class="block-info">
+                    <div class="block-icon">
+                        <i class="fa-solid fa-square-parking"></i>
+                    </div>
+                    <h3>Parkers & movers</h3>
+                    <p>For many of us, buying a home is a dre and one not easily attainable.</p>
+                </div>
+                <div class="block-info">
+                    <div class="block-icon">
+                        <i class="fa-solid fa-couch"></i>
+                    </div>
+                    <h3>Rental furniture</h3>
+                    <p>For many of us, buying a home is a dre and one not easily attainable.</p>
+                </div>
+                <div class="block-info">
+                    <div class="block-icon">
+                        <i class="fa-solid fa-water-ladder"></i>
+                    </div>
+                    <h3>Swimming pool</h3>
+                    <p>For many of us, buying a home is a dre and one not easily attainable.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
