add section properties

--- a/index.html
+++ b/index.html
@@ -78,6 +78,224 @@
 <!-- Properties -->
 <section class="properties">
     <div class="wrapper-container">
+        <div class="wrapper-properties">
+            <div class="wrapper-title">
+                <h2>Popular Properties</h2>
+                <a href="javascript:void(0)">VIEW ALL</a>
+            </div>
+            <div class="wrapper-properties-blocks">
+                <div class="properties-block">
+                    <div class="properties-img">
+                        <img src="./images/properties-1.png" alt="properties-img">
+                    </div>
+                    <div class="properties-info">
+                        <div class="properties-title">
+                            <h3>Capital hill residence</h3>
+                            <div class="favorites active">
+                                <i class="fa-solid fa-heart"></i>
+                            </div>
+                        </div>
+                        <div class="properties-location">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <p>East London</p>
+                        </div>
+                        <div class="properties-points">
+                            <div class="point">
+                                <i class="fa-solid fa-couch"></i>
+                                <span>6</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-utensils"></i>
+                                <span>2</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-bath"></i>
+                                <span>7</span>
+                            </div>
+                        </div>
+                        <div class="properties-price">
+                            <span>$5527.00</span>
+                            <button>View Details</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="properties-block">
+                    <div class="properties-img">
+                        <img src="./images/properties-2.png" alt="properties-img">
+                    </div>
+                    <div class="properties-info">
+                        <div class="properties-title">
+                            <h3>Picket Fence Realty</h3>
+                            <div class="favorites active">
+                                <i class="fa-solid fa-heart"></i>
+                            </div>
+                        </div>
+                        <div class="properties-location">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <p>East London</p>
+                        </div>
+                        <div class="properties-points">
+                            <div class="point">
+                                <i class="fa-solid fa-couch"></i>
+                                <span>6</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-utensils"></i>
+                                <span>2</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-bath"></i>
+                                <span>7</span>
+                            </div>
+                        </div>
+                        <div class="properties-price">
+                            <span>$3337.00</span>
+                            <button>View Details</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="properties-block">
+                    <div class="properties-img">
+                        <img src="./images/properties-3.png" alt="properties-img">
+                    </div>
+                    <div class="properties-info">
+                        <div class="properties-title">
+                            <h3>Canyon Tree Realty</h3>
+                            <div class="favorites">
+                                <i class="fa-solid fa-heart"></i>
+                            </div>
+                        </div>
+                        <div class="properties-location">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <p>East London</p>
+                        </div>
+                        <div class="properties-points">
+                            <div class="point">
+                                <i class="fa-solid fa-couch"></i>
+                                <span>6</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-utensils"></i>
+                                <span>2</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-bath"></i>
+                                <span>7</span>
+                            </div>
+                        </div>
+                        <div class="properties-price">
+                            <span>$8222.00</span>
+                            <button>View Details</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="properties-block">
+                    <div class="properties-img">
+                        <img src="./images/properties-4.png" alt="properties-img">
+                    </div>
+                    <div class="properties-info">
+                        <div class="properties-title">
+                            <h3>Canyon Tree Realty</h3>
+                            <div class="favorites">
+                                <i class="fa-solid fa-heart"></i>
+                            </div>
+                        </div>
+                        <div class="properties-location">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <p>East London</p>
+                        </div>
+                        <div class="properties-points">
+                            <div class="point">
+                                <i class="fa-solid fa-couch"></i>
+                                <span>6</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-utensils"></i>
+                                <span>2</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-bath"></i>
+                                <span>7</span>
+                            </div>
+                        </div>
+                        <div class="properties-price">
+                            <span>$8222.00</span>
+                            <button>View Details</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="properties-block">
+                    <div class="properties-img">
+                        <img src="./images/properties-5.png" alt="properties-img">
+                    </div>
+                    <div class="properties-info">
+                        <div class="properties-title">
+                            <h3>Canyon Tree Realty</h3>
+                            <div class="favorites">
+                                <i class="fa-solid fa-heart"></i>
+                            </div>
+                        </div>
+                        <div class="properties-location">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <p>East London</p>
+                        </div>
+                        <div class="properties-points">
+                            <div class="point">
+                                <i class="fa-solid fa-couch"></i>
+                                <span>6</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-utensils"></i>
+                                <span>2</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-bath"></i>
+                                <span>7</span>
+                            </div>
+                        </div>
+                        <div class="properties-price">
+                            <span>$8222.00</span>
+                            <button>View Details</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="properties-block">
+                    <div class="properties-img">
+                        <img src="./images/properties-6.png" alt="properties-img">
+                    </div>
+                    <div class="properties-info">
+                        <div class="properties-title">
+                            <h3>Canyon Tree Realty</h3>
+                            <div class="favorites">
+                                <i class="fa-solid fa-heart"></i>
+                            </div>
+                        </div>
+                        <div class="properties-location">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <p>East London</p>
+                        </div>
+                        <div class="properties-points">
+                            <div class="point">
+                                <i class="fa-solid fa-couch"></i>
+                                <span>6</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-utensils"></i>
+                                <span>2</span>
+                            </div>
+                            <div class="point">
+                                <i class="fa-solid fa-bath"></i>
+                                <span>7</span>
+                            </div>
+                        </div>
+                        <div class="properties-price">
+                            <span>$8222.00</span>
+                            <button>View Details</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
