--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
                 </ul>
                 <button>Contact us</button>
             </div>
+            <div class="menu-btn" id="navMenu">
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
+            </div>
         </div>
     </div>
 </header>
